# sequence_next

./: CMakeLists.txt  CMakePresets.json  README.md  lockfile.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
cmake/: appleclang-toolchain.cmake  use-fetch-content.cmake
docs/: TODO.md
examples/: CMakeLists.txt  hello-sequence_next.cpp
include/beman/sequence_next/: sequence_next.hpp
include/beman/sequence_next/detail/: conditional_element.hpp  filter_each.hpp  ignore_all.hpp  iota.hpp  set_next.hpp  state_helper.hpp  then_each.hpp
src/beman/sequence_next/: CMakeLists.txt  beman.sequence_next-config.cmake.in  sequence_next.cpp
tests/beman/sequence_next/: CMakeLists.txt  conditional_element.test.cpp  filter_each.test.cpp  sequence_next.test.cpp  state_helper.test.cpp
